cmake_minimum_required (VERSION 3.10)
project (Examples)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

function(configureProject target)
	set_property(TARGET ${target} PROPERTY CXX_STANDARD 23)
	set_property(TARGET ${target} PROPERTY CXX_STANDARD_REQUIRED ON)
	target_include_directories(${target} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../Workarounds/)
	if(MSVC)
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /experimental:module")
		target_compile_options(${target} PRIVATE /W4)
	endif()
endfunction()

add_library(std ${CMAKE_CURRENT_SOURCE_DIR}/../../Workarounds/std.cppm)
configureProject(std)
set_property(TARGET std PROPERTY FOLDER ${Workarounds})

file( GLOB chapter_dirs *)
foreach( chapter_dir ${chapter_dirs} )
	if( IS_DIRECTORY ${chapter_dir} AND chapter_dir  )
	    get_filename_component( folder ${chapter_dir} NAME )
		if( folder MATCHES "^Chapter.*" )
			file( GLOB children ${chapter_dir}/* )
			foreach( child ${children} )
				get_filename_component( project_name ${child} NAME_WE )

				if( IS_DIRECTORY ${child} )
					file( GLOB grand_children ${child}/* )
					add_executable( ${project_name} ${grand_children} )
					if( EXISTS "${child}/roman-internals.cpp" )
						set_source_files_properties("${child}/roman-internals.cpp" PROPERTIES COMPILE_FLAGS /internalPartition)
					endif()
					if( EXISTS "${child}/package.cpp" )
						set_source_files_properties("${child}/package.cpp" PROPERTIES COMPILE_FLAGS /internalPartition)
					endif()
				else()
					add_executable( ${project_name} ${child} )
				endif()
				
				configureProject(${project_name})
				set_property(TARGET ${project_name} PROPERTY FOLDER ${folder}) 
				add_dependencies(${project_name} std)
				target_link_libraries(${project_name} std)
			endforeach()
		endif()
	endif()
endforeach()